add unit- and integration tests
Made the adapter more testable.